chore(package.json): 更新包名

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ezuikit",
+  "name": "ezuikit-wesine",
   "version": "0.2.4",
   "description": "ezuikit javascript for npm",
   "main": "ezuikit.js",
